TGR-1411: Zion: Enable ZIP-Encoding and correct byte-messages